# RustyC2

./: .gitignore  .gitmodules  README.md
backend/: Cargo.toml  TODO.md
backend/config/: default.json
backend/implants/http/owl/: main.cpp  main.h
backend/scripts/: randomize_command_identifiers.py
backend/src/: database.rs  main.rs
backend/src/api/: routes.rs
backend/src/implants/: generate.rs
backend/src/misc/: help.rs  mod.rs  utils.rs
backend/src/servers/: http.rs
code/: Cargo.toml  TODO.md
code/config/: default.json
code/scripts/: randomize_command_identifiers.py
code/src/: database.rs  help.rs  http_server.rs  main.rs  models.rs  settings.rs  utils.rs
code/src/api/: routes.rs  server.rs
code/src/implants/: generate.rs
code/src/misc/: help.rs  utils.rs
code/src/servers/: http.rs
frontend/: Cargo.toml  config.json
frontend/src/: main.rs  models.rs  routes.rs  settings.rs
frontend/templates/: dashboard.html
