[package]
name = "rusty_c2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
lazy_static = "1.4"
config = "0.13.1"
serde = "1.0.137"
rusqlite = { version = "0.27.0", features = ["bundled"] }
futures = "0.3.21"
regex = "1.6.0"
chrono = "0.4.22"