[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tera = "1.17.1"
lazy_static = "1.4"
config = "0.13.1"
serde = "1.0.137"
log = "0.4.17"
env_logger = "0.9.1"
awc = "3.0.1"
serde_json = "1.0.85"